--- a/.github/workflows/GL_DL.yml
+++ b/.github/workflows/GL_DL.yml
@@ -24,7 +24,7 @@ env:
 
 jobs:
   # This workflow contains a single job called "xygeni_security_scan"
-  xygeni_cicd_scan:
+  gl_scan:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -57,7 +57,7 @@ jobs:
 
 
       # Runs a set of commands using the runners shell 
-      - name: Download GL 
+      - name: Download and execute GL 
         run: |
           set +e
           echo Downloading GL ....
@@ -72,4 +72,4 @@ jobs:
           duration=$SECONDS
           echo "seconds $duration"
           echo "$((duration / 60)) minutes and $((duration % 60)) seconds elapsed."
-          exit 1
+
