--- a/.github/workflows/GL_DL.yml
+++ b/.github/workflows/GL_DL.yml
@@ -24,7 +24,7 @@ env:
 
 jobs:
   # This workflow contains a single job called "xygeni_security_scan"
-  gl_scan:
+  xygeni_cicd_scan:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -57,7 +57,7 @@ jobs:
 
 
       # Runs a set of commands using the runners shell 
-      - name: Download and execute GL 
+      - name: Download GL 
         run: |
           set +e
           echo Downloading GL ....
@@ -67,9 +67,22 @@ jobs:
           mkdir /tmp/gitleaks-8.16.1
           /usr/bin/tar xz --warning=no-unknown-keyword --overwrite -C /tmp/gitleaks-8.16.1 -f /tmp/gitleaks.tmp
           #/usr/bin/tar --posix -z -cf cache.tgz -P -C /home/runner/work/elasticsearch/elasticsearch --files-from manifest.txt
-          SECONDS=0
-          /usr/bin/time --verbose /tmp/gitleaks-8.16.1/gitleaks detect --redact -v --exit-code=2 --report-format=sarif --report-path=results.sarif --log-level=debug
-          duration=$SECONDS
+
+          if [ "$INCLUDE_GIT_HISTORY" == "true" ]; then
+            echo "***********************"
+            echo "Executing over history"
+            echo "***********************"
+            SECONDS=0
+            /usr/bin/time --verbose /tmp/gitleaks-8.16.1/gitleaks detect --redact           --exit-code=2 --report-format=sarif --report-path=results.sarif --log-level=debug
+            duration=$SECONDS
+          else
+            echo "***********************"
+            echo "Not including history"
+            echo "***********************"
+            SECONDS=0
+            /usr/bin/time --verbose /tmp/gitleaks-8.16.1/gitleaks detect --redact --no-git --exit-code=2 --report-format=sarif --report-path=results.sarif --log-level=debug
+            duration=$SECONDS
+          fi
           echo "seconds $duration"
           echo "$((duration / 60)) minutes and $((duration % 60)) seconds elapsed."
 
