--- a/.github/workflows/GL_DL.yml
+++ b/.github/workflows/GL_DL.yml
@@ -73,16 +73,44 @@ jobs:
             echo "Executing over history"
             echo "***********************"
             SECONDS=0
-            /usr/bin/time --verbose /tmp/gitleaks-8.16.1/gitleaks detect --redact           --exit-code=2 --report-format=sarif --report-path=results.sarif --log-level=debug
+            /usr/bin/time --verbose /tmp/gitleaks-8.16.1/gitleaks detect --redact           --exit-code=2 --report-format=sarif --report-path=results.gl.sarif.${{ github.event.repository.name }}.history --log-level=debug
             duration=$SECONDS
           else
             echo "***********************"
             echo "Not including history"
             echo "***********************"
             SECONDS=0
-            /usr/bin/time --verbose /tmp/gitleaks-8.16.1/gitleaks detect --redact --no-git --exit-code=2 --report-format=sarif --report-path=results.sarif --log-level=debug
+            /usr/bin/time --verbose /tmp/gitleaks-8.16.1/gitleaks detect --redact --no-git --exit-code=2 --report-format=sarif --report-path=results.gl.sarif.${{ github.event.repository.name }}.nogit --log-level=debug
             duration=$SECONDS
           fi
           echo "seconds $duration"
           echo "$((duration / 60)) minutes and $((duration % 60)) seconds elapsed."
+          
+      - name: Send mail from INTERNAL 
+        if: always()
+        uses: dawidd6/action-send-mail@v3
+        with:
+          # Specify connection via URL (replaces server_address, server_port, secure, 
+          # username and password)
+          #
+          # Format:
+          #
+          #  * smtp://user:password@server:port
+          #  * smtp+starttls://user:password@server:port
+          connection_url: ${{secrets.MAIL_CONNECTION}}
+          # Required mail server address if not connection_url:
+          server_address: smtp.gmail.com
+          # Server port, default 25:
+          server_port: 465
+          # Optional whether this connection use TLS (default is true if server_port is 465)
+          secure: true
+          # Required mail subject:
+          subject: Secrets [tool=GitLeaks] [repo=${{ github.event.repository.name }}] [history=${{ github.event.inputs.secret-history }}]
+          # Required recipients' addresses:
+          to: luis.garcia@xygeni.io
+          # Required sender full name (address can be skipped):
+          from: Luke Skywalker # <user@example.com>
+          # Optional plain body:  
+          body: INTERNAL Secret .\n Build job of ${{github.repository}} completed successfully!
+          attachments: results.*
 
